2015-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Added imports for as and is from methods

	* DESCRIPTION: Removed several of the (largely redundant) URLs, and
	minor edits in Description: to update to current standard

	* man/RProtoBuf-package.Rd: Updated, removed old URLs.

	* .travis.yml: Accelerate by installing dependencies via apt-get

2015-08-05  Balasubramanian Narasimhan <b.naras@gmail.com>

	* NAMESPACE: Added import for show from methods package

2015-07-08  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Update URL to windows build of the required
	ProtoBuf library

2015-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Minor edits

2015-01-16  Jeroen Ooms  <jeroenooms@gmail.com>

	* DESCRIPTION: Make SystemRequirements: more explicit

2014-12-11  Jeroen Ooms  <jeroenooms@gmail.com>

	* DESCRIPTION: Update URLs

2014-12-10  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version): Release 0.4.2

2014-12-10  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Use new ProtoBuf 2.6.1 builds on Windows
	* tools/winlibs.R: Helper function used for Windows build

	* inst/unitTests/runit.int64.R: Fixed a windows bug

2014-12-08  Jeroen Ooms  <jeroenooms@gmail.com>

	* inst/proto/rexp.proto: Add a new type 'native'

	* R/rexp_obj.R: Modify (un)serialize_pb to serialize() non-data types
	as 'native' types

2014-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added after move to GitHub

	* README.md: Added minimal first version with Travis badge

2014-12-04  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.int64.R: restore options on exit from this
	  function to make the test indempotent.

2014-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* man/Message-class.Rd: Completed documentation
	* man/Descriptor-class.Rd: Ditto
	* man/EnumDescriptor-class.Rd: Ditto

2014-12-01  Murray Stokely  <mstokely@google.com>

	* R/wrapper_ZeroCopyInputStream.R: Avoid file.create for getting