@@ -1,5 +1,5 @@
 Package: RProtoBuf
-Version: 0.4.2.2
+Version: 0.4.2.3
 Date: 2015-08-23
 Author: Romain Francois, Dirk Eddelbuettel, Murray Stokely and Jeroen Ooms
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
